src/main/java/com/example/ledgerly/k8s/10-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ledgerly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["sh","-c","pg_isready -U ledgerly -d ledgerly"]
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ledgerly
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
