src/main/java/com/example/ledgerly/k8s/11-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: ledgerly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          readinessProbe:
            exec:
              command: ["sh","-c","mongosh --quiet --eval 'db.runCommand({ ping: 1 }).ok' localhost:27017/ledgerly | grep 1"]
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ledgerly
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
