src/main/java/com/example/ledgerly/k8s/12-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ledgerly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["sh","-c","redis-cli ping | grep PONG"]
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ledgerly
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
